# bitbar-plugins

./: .gitignore  Cargo.toml  marketshare.10s.py  marketshare.10s.sh
marketshare-plugin/: marketshare.py
src/: main.rs
