[package]
name = "marketshare"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
chrono = "0.4.24"
chrono-tz = "0.8.2"
home = "0.5.4"
prettytable-rs = "^0.10"
reqwest = {version = "0.11.17", features = ["json", "blocking"]}
serde_json = "1.0.96"
